# ReflectionApi_Qt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example-1.cpp
include/ReflectionApi_Qt/: converterhelper.h  reflectionapi-qt.h
include/ReflectionApi_Qt/helper/: sfinae.h
src/: converterhelper.cpp
src/helper/: sfinae.cpp
